--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,8 +1,15 @@
 # https://losst.ru/ustanovka-nginx-ubuntu-16-04
 # https://pai-bx.com/wiki/nginx/2332-useful-redirects-in-nginx/#1
 # sudo iptables -A INPUT ! -s 127.0.0.1 -p tcp -m tcp --dport 8080 -j DROP
+events {
+    worker_connections 1024;
+}
+
+http {
 server {
-  listen       80;
+    listen       80;
+        listen  [::]:80;
+        server_name  localhost;
 
   # https://www.digitalocean.com/community/tutorials/how-to-optimize-nginx-configuration
   gzip            on;
@@ -37,4 +44,5 @@ server {
   location / {
     try_files /view/404.html = 404;
   }
+}
 }
